--- a/CV test.html
+++ b/CV test.html
@@ -5,112 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: black;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .cv-container {
-            display: flex;
-            width: 800px;
-            background-color: #141414;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
-            border-radius: 10px;
-            overflow: hidden;
-            animation: fadeIn 1.5s ease-in-out;
-        }
-        .left-panel {
-            width: 35%;
-            background-color: #1e90ff;
-            padding: 20px;
-            color: white;
-            text-align: center;
-        }
-        .left-panel img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: 4px solid white;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-            animation: slideIn 1.5s ease-in-out;
-        }
-        .left-panel h2 {
-            margin-top: 10px;
-        }
-        .left-panel .contact, .left-panel .skills {
-            margin-top: 20px;
-            text-align: left;
-        }
-        .left-panel .skills-box {
-            background-color: rgba(255, 255, 255, 0.2);
-            padding: 10px;
-            border-radius: 5px;
-        }
-        .right-panel {
-            width: 65%;
-            padding: 20px;
-            color: white;
-        }
-        .right-panel h1 {
-            font-size: 3em;
-            color: #1e90ff;
-        }
-        .right-panel h3 {
-            border-bottom: 2px solid #1e90ff;
-            padding-bottom: 5px;
-            margin-top: 20px;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        @keyframes slideIn {
-            from { transform: translateY(-50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-    </style>
 </head>
 <body>
     <div class="cv-container">
         <div class="left-panel">
-            <img src="/mnt/data/image.png" alt="Profile Photo">
-            <h2>JESSICA</h2>
-            <p>Senior Artist</p>
+            <img src="https://raw.githubusercontent.com/yourgithubusername/yourrepository/main/profile.png" alt="Profile Photo">
+            <h2>Prasstyo Adhi Pangestu</h2>
+            <p>Artist</p>
             <div class="contact">
                 <h3>Contact</h3>
-                <p>Email: jessica@example.com</p>
+                <p>Email: prsstyoadhi02@gmail.com</p>
                 <p>Phone: +123 456 7890</p>
             </div>
             <div class="skills">
                 <h3>Skills</h3>
                 <div class="skills-box">
-                    <p>Adobe Illustrator</p>
-                    <p>Adobe Photoshop</p>
-                    <p>HTML & CSS</p>
-                    <p>JavaScript</p>
+                    <p>3D Designer</p>
+                    <p>Drawing</p>
+                    <p>Main game</p>
+                    <p>Main game</p>
                 </div>
             </div>
         </div>
         <div class="right-panel">
-            <h1>RESUME</h1>
+            <h1><span class="typing-effect">RESUME</span></h1>
             <h3>About Me</h3>
             <p>A passionate designer with experience in web and graphic design...</p>
             <h3>Education</h3>
-            <p><strong>Bachelor of Arts</strong> - University Name</p>
+            <p><strong>Bachelor of Computer Science</strong> - University Of Haluoleo</p>
             <h3>Experience</h3>
             <p><strong>Senior Web UI Designer</strong> - Company Name (2017-2019)</p>
         </div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            document.querySelector(".cv-container").style.animation = "fadeIn 1.5s ease-in-out";
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
