--- a/CV test.html
+++ b/CV test.html
@@ -9,13 +9,13 @@
 <body>
     <div class="cv-container">
         <div class="left-panel">
-            <img src="https://raw.githubusercontent.com/yourgithubusername/yourrepository/main/profile.png" alt="Profile Photo">
+            <img src="catprofile.jpg" alt="Profile Photo">
             <h2>Prasstyo Adhi Pangestu</h2>
             <p>Artist</p>
             <div class="contact">
                 <h3>Contact</h3>
                 <p>Email: prsstyoadhi02@gmail.com</p>
-                <p>Phone: +123 456 7890</p>
+                <p>Phone: +6285947432880</p>
             </div>
             <div class="skills">
                 <h3>Skills</h3>
