--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My CV</title>
-        <!-- Import Sour Gummy font from Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My CV</title>
+    <!-- Import Sour Gummy font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <!-- Font Awesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
@@ -39,7 +37,6 @@
                     <p>Game Design</p>
                 </div>
             </div>
-           
         </div>
         <div class="right-panel">
             <h1><span class="typing-effect">RESUME</span></h1>
@@ -52,8 +49,6 @@
             <p><strong>Bachelor of Computer Science</strong> - University Of Haluoleo</p>
             <h3>Experience</h3>
             <p><strong>No Experience yet</strong> - Unemployed 🥀🥀</p>
-
-            <!-- Social Media Links with Icons -->
             <div class="social-links">
                 <a href="https://www.instagram.com/ssaauucceekeetchup" target="_blank">
                     <i class="fab fa-instagram"></i>
@@ -63,9 +58,19 @@
                 </a>
             </div>
         </div>
-        </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Detect device type
+        const isMobile = window.innerWidth <= 768;  // Adjust this based on your breakpoint
+
+        if (isMobile) {
+            // If it's a mobile device, set mobile background
+            document.body.classList.add("mobile-background");
+        } else {
+            // If it's a desktop device, set desktop background
+            document.body.classList.add("desktop-background");
+        }
+    </script>
 </body>
 </html>
