--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             <p><strong>Bachelor of Computer Science</strong> - University Of Haluoleo</p>
             <h3>Experience</h3>
             <p><strong>No Experience yet</strong> - Unemployed 🥀🥀</p>
+
+            <!-- Social Media Links with Icons -->
             <div class="social-links">
                 <a href="https://www.instagram.com/ssaauucceekeetchup" target="_blank">
                     <i class="fab fa-instagram"></i>
@@ -60,17 +62,6 @@
         </div>
     </div>
 
-    <script>
-        // Detect device type
-        const isMobile = window.innerWidth <= 768;  // Adjust this based on your breakpoint
-
-        if (isMobile) {
-            // If it's a mobile device, set mobile background
-            document.body.classList.add("mobile-background");
-        } else {
-            // If it's a desktop device, set desktop background
-            document.body.classList.add("desktop-background");
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
